Развернуть полностью новый проект с нуля в докере. https://trello.com/c/23HQJxOQ

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "symfony/dotenv": "5.0.*",
     "symfony/flex": "^1.6",
     "symfony/framework-bundle": "5.0.*",
+    "symfony/orm-pack": "^1.0",
     "symfony/twig-pack": "^1.0",
     "symfony/yaml": "5.0.*"
   },
