--- a/example.env
+++ b/example.env
@@ -23,3 +23,8 @@ APP_SECRET=112d6b6e37507e7d4e84b44aad32695f
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN=*
 ###< nelmio/cors-bundle ###
+
+### DATABASE VARS ###
+DATABASE_NAME=gs
+DATABASE_USER=gs
+DATABASE_PASSWORD=goodsurfing
