--- a/.env
+++ b/.env
@@ -29,3 +29,9 @@ DATABASE_NAME=gs
 DATABASE_USER=gs
 DATABASE_PASSWORD=goodsurfing
 DATABASE_URL=127.0.0.1:5432
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+###< doctrine/doctrine-bundle ###
