--- a/composer.json
+++ b/composer.json
@@ -1,68 +1,71 @@
 {
-  "type": "project",
-  "license": "proprietary",
-  "require": {
-    "php": "^7.2.5",
-    "ext-ctype": "*",
-    "ext-iconv": "*",
-    "nelmio/api-doc-bundle": "^3.6",
-    "nelmio/cors-bundle": "^2.0",
-    "symfony/asset": "5.0.*",
-    "symfony/console": "5.0.*",
-    "symfony/dotenv": "5.0.*",
-    "symfony/flex": "^1.6",
-    "symfony/framework-bundle": "5.0.*",
-    "symfony/orm-pack": "^1.0",
-    "symfony/twig-pack": "^1.0",
-    "symfony/yaml": "5.0.*"
-  },
-  "require-dev": {
-    "symfony/maker-bundle": "^1.14"
-  },
-  "config": {
-    "preferred-install": {
-      "*": "dist"
+    "type": "project",
+    "license": "proprietary",
+    "require": {
+        "php": "^7.1.3",
+        "ext-ctype": "*",
+        "ext-iconv": "*",
+        "doctrine/annotations": "^1.10",
+        "firebase/php-jwt": "^5.2",
+        "friendsofsymfony/rest-bundle": "^2.7",
+        "jms/serializer-bundle": "^3.5",
+        "sensio/framework-extra-bundle": "^5.5",
+        "symfony/console": "4.4.*",
+        "symfony/dotenv": "4.4.*",
+        "symfony/flex": "^1.3.1",
+        "symfony/framework-bundle": "4.4.*",
+        "symfony/options-resolver": "4.4.*",
+        "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "4.4.*",
+        "symfony/validator": "4.4.*",
+        "symfony/yaml": "4.4.*"
     },
-    "sort-packages": true
-  },
-  "autoload": {
-    "psr-4": {
-      "App\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "App\\Tests\\": "tests/"
-    }
-  },
-  "replace": {
-    "paragonie/random_compat": "2.*",
-    "symfony/polyfill-ctype": "*",
-    "symfony/polyfill-iconv": "*",
-    "symfony/polyfill-php72": "*",
-    "symfony/polyfill-php71": "*",
-    "symfony/polyfill-php70": "*",
-    "symfony/polyfill-php56": "*"
-  },
-  "scripts": {
-    "auto-scripts": {
-      "cache:clear": "symfony-cmd",
-      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+    "require-dev": {
+        "symfony/maker-bundle": "^1.15"
     },
-    "post-install-cmd": [
-      "@auto-scripts"
-    ],
-    "post-update-cmd": [
-      "@auto-scripts"
-    ]
-  },
-  "conflict": {
-    "symfony/symfony": "*"
-  },
-  "extra": {
-    "symfony": {
-      "allow-contrib": false,
-      "require": "5.0.*"
+    "config": {
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
+    "replace": {
+        "paragonie/random_compat": "2.*",
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php71": "*",
+        "symfony/polyfill-php70": "*",
+        "symfony/polyfill-php56": "*"
+    },
+    "scripts": {
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        },
+        "post-install-cmd": [
+            "@auto-scripts"
+        ],
+        "post-update-cmd": [
+            "@auto-scripts"
+        ]
+    },
+    "conflict": {
+        "symfony/symfony": "*"
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "4.4.*"
+        }
     }
-  }
 }
