--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+git rm -r --cached .idea
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -7,6 +7,5 @@
 /public/bundles/
 /var/
 /vendor/
-.idea
-.env
 ###< symfony/framework-bundle ###
+.idea
