--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,37 @@ services:
       - './var/uploads:/usr/share/nginx/uploads'
     restart: always
 
+  swagger-editor:
+    image: swaggerapi/swagger-editor
+    container_name: "swagger-editor"
+    ports:
+      - "8081:8080"
+  swagger-ui:
+    image: swaggerapi/swagger-ui
+    container_name: "swagger-ui"
+    ports:
+      - "8082:8080"
+    volumes:
+      - ./swagger/openapi.json:/openapi.json
+    environment:
+      SWAGGER_JSON: /openapi.json
+      # API_URL: ""
+  swagger-api:
+    image: danielgtaylor/apisprout
+    container_name: "swagger-api"
+    ports:
+      - "8083:8000"
+    volumes:
+      - ./swagger/openapi.json:/openapi.json
+    command: /openapi.json
+  swagger-nginx:
+    image: nginx:mainline-alpine
+    container_name: "swagger-nginx"
+    ports:
+      - "8084:8084"
+    volumes:
+      - ./build/swagger/nginx/conf.conf:/etc/nginx/conf.d/default.conf
+
 networks:
   gs:
     driver: "bridge"
