--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,12 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "1.11.99.5",
         "doctrine/annotations": "^1.10",
+        "doctrine/common": "^2",
+        "doctrine/doctrine-bundle": "^2",
+        "doctrine/doctrine-migrations-bundle": "^2",
+        "doctrine/orm": "^2",
         "firebase/php-jwt": "^5.2",
         "friendsofsymfony/rest-bundle": "^2.7",
         "jms/serializer-bundle": "^3.5",
@@ -18,7 +23,6 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
         "symfony/options-resolver": "4.4.*",
-        "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "4.4.*",
         "symfony/swiftmailer-bundle": "^3.4",
         "symfony/validator": "4.4.*",
@@ -31,7 +35,11 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "ocramius/package-versions": true,
+            "symfony/flex": true
+        }
     },
     "autoload": {
         "psr-4": {
