chore: controller test

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+
+###> PhpStorm ###
+.idea
+###> PhpStorm ###
