--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -1,8 +1,8 @@
 nelmio_api_doc:
     documentation:
         info:
-            title: My App
-            description: This is an awesome app!
+            title: GoodSurfing
+            description: Start your meaningful journey!
             version: 1.0.0
     areas: # to filter documented areas
         path_patterns: # an array of regexps (document only routes under /api, except /api/doc)
