--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,15 +16,15 @@ security:
             security: false
 
         login:
-            pattern: ^/api/login
+            pattern: ^/api/v1/login
             stateless: true
             json_login:
-                check_path: /api/login_check
+                check_path: /api/v1/login_check
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
         api:
-            pattern: ^/api
+            pattern: ^/api/v1(?!/doc$)
             stateless: true
             jwt: ~
 
@@ -41,8 +41,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/api/login, roles: PUBLIC_ACCESS }
-        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/v1/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api/v1/doc$, roles: PUBLIC_ACCESS }
+        - { path: ^/api/v1,       roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
