--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,14 +3,9 @@ controllers:
     type: attribute
 
 app.swagger_ui:
-    path: /api/doc
+    path: /api/v1/doc
     methods: GET
     defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
 
-app.swagger:
-    path: /api/doc.json
-    methods: GET
-    defaults: { _controller: nelmio_api_doc.controller.swagger }
-
 api_login_check:
-    path: /api/login_check
+    path: /api/v1/login_check
