--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -11,21 +11,19 @@ security:
                 class: App\Entity\User
                 property: email
     firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-
         login:
-            pattern: ^/api/v1/login
+            pattern: ^/api/login_check
             stateless: true
             json_login:
-                check_path: /api/v1/login_check
+                check_path: /api/login_check
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
+                require_previous_session: false
 
         api:
-            pattern: ^/api/v1(?!/doc$)
+            pattern: ^/api/v1(?!/doc.json$)
             stateless: true
+            provider: app_user_provider
             jwt: ~
 
         main:
@@ -41,9 +39,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/api/v1/login, roles: PUBLIC_ACCESS }
-        - { path: ^/api/v1/doc$, roles: PUBLIC_ACCESS }
-        - { path: ^/api/v1,       roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/login_check,  roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
+        - { path: ^/api/v1/doc.json,  roles: [ PUBLIC_ACCESS ]}
+        - { path: ^/api/v1,           roles: [ IS_AUTHENTICATED_FULLY ] }
+        - { path: ^/.*,               roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
 
 when@test:
     security:
