--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,10 +2,5 @@ controllers:
     resource: ../src/Controller/
     type: attribute
 
-app.swagger_ui:
-    path: /api/v1/doc
-    methods: GET
-    defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
-
 api_login_check:
-    path: /api/v1/login_check
+    path: /api/login_check
