--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.1.*",
         "symfony/proxy-manager-bridge": "6.1.*",
-        "symfony/runtime": "6.1.*",
+        "symfony/runtime": "^6.1",
         "symfony/security-bundle": "6.1.*",
         "symfony/yaml": "6.1.*",
         "symfonycasts/verify-email-bundle": "^1.12"
