--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -10,11 +10,11 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
         mappings:
-            App:
+            User:
                 is_bundle: false
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
+                dir: '%kernel.project_dir%/src/User/Domain'
+                prefix: 'App\User\Domain'
+                type: attribute
 
 when@test:
     doctrine:
