--- a/config/services.yaml
+++ b/config/services.yaml
@@ -16,12 +16,9 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-#    App\:
-#        resource: '../src/'
-#        exclude:
-#            - '../src/DependencyInjection/'
-#            - '../src/Entity/'
-#            - '../src/Kernel.php'
+    ### TODO: Вынести в каждый неймспейс
+    App\User\Presentation\Api\V1\:
+        resource: '../src/User/Presentation/Api/V1'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
