fix: cors allow all origins

--- a/.env.dist
+++ b/.env.dist
@@ -22,3 +22,7 @@ DATABASE_NAME=gs_dev
 DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
