--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,7 +21,7 @@ security:
                 require_previous_session: false
 
         api:
-            pattern: ^/api/v1(?!/doc.json$)
+            pattern: ^/api/v1(?!(/doc.json|/user/register)$)
             stateless: true
             provider: app_user_provider
             jwt: ~
@@ -39,10 +39,11 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/api/login_check,  roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
-        - { path: ^/api/v1/doc.json,  roles: [ PUBLIC_ACCESS ]}
-        - { path: ^/api/v1,           roles: [ IS_AUTHENTICATED_FULLY ] }
-        - { path: ^/.*,               roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
+        - { path: ^/api/login_check,        roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
+        - { path: ^/api/v1/user/register,   roles: [ PUBLIC_ACCESS ] }
+        - { path: ^/api/v1/doc.json,        roles: [ PUBLIC_ACCESS ]}
+        - { path: ^/api/v1,                 roles: [ IS_AUTHENTICATED_FULLY ] }
+        - { path: ^/.*,                     roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
 
 when@test:
     security:
