--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/security-bundle": "6.1.*",
         "symfony/serializer": "6.1.*",
         "symfony/uid": "6.1.*",
+        "symfony/validator": "6.1.*",
         "symfony/yaml": "6.1.*",
         "symfonycasts/verify-email-bundle": "^1.12"
     },
