feat: send register email

--- a/.env.dist
+++ b/.env.dist
@@ -26,3 +26,7 @@ DATABASE_PASSWORD=postgres
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://mailcatcher:1025
+###< symfony/mailer ###
