--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -6,6 +6,7 @@ nelmio_cors:
 #        allow_headers: ['Content-Type', 'Authorization']
 #        expose_headers: ['Link']
 #        max_age: 3600
+### TODO: ограничить доступность через env
     paths:
         '^/api/':
             allow_origin: ['*']
