--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,11 +39,12 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/api/login_check,        roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
-        - { path: ^/api/v1/user/register,   roles: [ PUBLIC_ACCESS ] }
-        - { path: ^/api/v1/doc.json,        roles: [ PUBLIC_ACCESS ]}
-        - { path: ^/api/v1,                 roles: [ IS_AUTHENTICATED_FULLY ] }
-        - { path: ^/.*,                     roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
+        - { path: ^/api/login_check,                roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
+        - { path: ^/api/v1/user/register,           roles: [ PUBLIC_ACCESS ] } ### TODO: Вынести все паблик методы
+        - { path: ^/api/v1/user/recover-password,   roles: [ PUBLIC_ACCESS ] }
+        - { path: ^/api/v1/doc.json,                roles: [ PUBLIC_ACCESS ]}
+        - { path: ^/api/v1,                         roles: [ IS_AUTHENTICATED_FULLY ] }
+        - { path: ^/.*,                             roles: [ IS_AUTHENTICATED_ANONYMOUSLY ] }
 
 when@test:
     security:
