feat: add rabbitmq with amqp transport for messenger

--- a/.env.dist
+++ b/.env.dist
@@ -30,3 +30,10 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###> symfony/mailer ###
 MAILER_DSN=smtp://mailcatcher:1025
 ###< symfony/mailer ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+MESSENGER_TRANSPORT_DSN=amqp://guest:guest@gs_rabbitmq:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
