--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,13 @@
         "lexik/jwt-authentication-bundle": "^2.16",
         "nelmio/api-doc-bundle": "^4.10",
         "nelmio/cors-bundle": "^2.2",
+        "symfony/amqp-messenger": "6.1.*",
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.1.*",
         "symfony/mailer": "6.1.*",
+        "symfony/messenger": "6.1.*",
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "6.1.*",
         "symfony/security-bundle": "6.1.*",
