--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,7 +6,7 @@
 parameters:
 
 imports:
-    - { resource: '../src/User/config/services.yaml' }
+#    - { resource: '../src/User/config/services.yaml' }
 
 services:
     # default configuration for services in *this* file
@@ -17,8 +17,14 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     ### TODO: Вынести в каждый неймспейс
-    App\User\Presentation\Api\V1\:
-        resource: '../src/User/Presentation/Api/V1'
+
+    user_services:
+        namespace: App\User\
+        resource: '../src/User/{Application,Domain,Presentation}'
+    user_repositories:
+        namespace: App\User\Infrastructure\Persistence\
+        resource: '../src/User/Infrastructure/Persistence'
+        tags: [ doctrine.repository_service ]
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
