feat: verify email link

--- a/.env.dist
+++ b/.env.dist
@@ -37,3 +37,8 @@ MAILER_DSN=smtp://mailcatcher:1025
 MESSENGER_TRANSPORT_DSN=amqp://guest:guest@gs_rabbitmq:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
+
+###> email verification ###
+EMAIL_FROM_ADDRESS=no-reply@gudsurfing.ru
+EMAIL_FROM_NAME=Goodsurfing
+###< email verification ###
