--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
         "symfony/flex": "^2",
+        "symfony/form": "6.1.*",
         "symfony/framework-bundle": "6.1.*",
         "symfony/mailer": "6.1.*",
         "symfony/messenger": "6.1.*",
@@ -24,6 +25,7 @@
         "symfony/runtime": "6.1.*",
         "symfony/security-bundle": "6.1.*",
         "symfony/serializer": "6.1.*",
+        "symfony/twig-bundle": "6.1.*",
         "symfony/uid": "6.1.*",
         "symfony/validator": "6.1.*",
         "symfony/yaml": "6.1.*",
