--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,22 +1,12 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
-
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
 
-imports:
-#    - { resource: '../src/User/config/services.yaml' }
-
 services:
-    # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    ### TODO: Вынести в каждый неймспейс
+        bind:
+            $emailFromAddress: '%env(resolve:EMAIL_FROM_ADDRESS)%'
+            $emailFromName: '%env(resolve:EMAIL_FROM_NAME)%'
 
     user_services:
         namespace: App\User\
@@ -25,6 +15,3 @@ services:
         namespace: App\User\Infrastructure\Persistence\
         resource: '../src/User/Infrastructure/Persistence'
         tags: [ doctrine.repository_service ]
-
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
