--- a/.env
+++ b/.env
@@ -59,3 +59,7 @@ MESSENGER_TRANSPORT_ASYNC_DSN=amqp://guest:guest@gs_rabbitmq:5672/%2f/messages
 EMAIL_FROM_ADDRESS=no-reply@goodsurfing.org
 EMAIL_FROM_NAME='Goodsurfing Team'
 ###< email verification ###
+
+CADDY_BASIC_AUTH_LOGIN=admin
+CADDY_BASIC_AUTH_TOKEN=$2a$14$Yljdx2kyi1SZqzvwBOezZeCHJGithnVWWOBK4zkLj32A1zYOWNmAK
+
