feat: add user locale

--- a/.env
+++ b/.env
@@ -61,5 +61,5 @@ EMAIL_FROM_NAME='Goodsurfing Team'
 ###< email verification ###
 
 CADDY_BASIC_AUTH_LOGIN=admin
-CADDY_BASIC_AUTH_TOKEN=$2a$14$Yljdx2kyi1SZqzvwBOezZeCHJGithnVWWOBK4zkLj32A1zYOWNmAK
+CADDY_BASIC_AUTH_TOKEN='$2a$14$Yljdx2kyi1SZqzvwBOezZeCHJGithnVWWOBK4zkLj32A1zYOWNmAK'
 
