--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": ">=8.1.12",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "aws/aws-sdk-php-symfony": "^2.5",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
