--- a/config/services.yaml
+++ b/config/services.yaml
@@ -16,6 +16,8 @@ services:
             $emailFromName: '%env(resolve:EMAIL_FROM_NAME)%'
             $availableLocales: '%app.supported_locales%'
             $serverName: '%env(resolve:SERVER_NAME)%'
+            $s3BucketName: '%env(resolve:AWS_BUCKET)%'
+            $s3BucketTtl: '%env(resolve:AWS_BUCKET_TTL)%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
