--- a/config/services.yaml
+++ b/config/services.yaml
@@ -30,3 +30,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    
+    _instanceof:
+        App\DoctrineType\AbstractEnumType:
+            tags: [ 'app.doctrine_enum_type' ]
