chore: minio image and support

--- a/.env
+++ b/.env
@@ -64,9 +64,9 @@ CADDY_BASIC_AUTH_LOGIN=admin
 CADDY_BASIC_AUTH_TOKEN='$2a$14$Yljdx2kyi1SZqzvwBOezZeCHJGithnVWWOBK4zkLj32A1zYOWNmAK'
 
 ###> aws/aws-sdk-php-symfony ###
-AWS_KEY=not-a-real-key
-AWS_SECRET=@@not-a-real-secret
-AWS_ENDPOINT=http://storage.yandexcloud.net
+AWS_KEY=minioadmin
+AWS_SECRET=minioadmin
+AWS_ENDPOINT=http://localhost:9000
 AWS_BUCKET=dev
 AWS_BUCKET_TTL=+30min
 ###< aws/aws-sdk-php-symfony ###
