--- a/http-requests/http-client.env.json.dist
+++ b/http-requests/http-client.env.json.dist
@@ -3,6 +3,7 @@
       "host": "https://localhost",
       "username": "test@test.com",
       "password": "Test1234",
-      "auth_token": ""
+      "auth_token": "",
+      "media_upload_url": ""
     },
 }
