--- a/.env
+++ b/.env
@@ -66,7 +66,8 @@ CADDY_BASIC_AUTH_TOKEN='$2a$14$Yljdx2kyi1SZqzvwBOezZeCHJGithnVWWOBK4zkLj32A1zYOW
 ###> aws/aws-sdk-php-symfony ###
 AWS_KEY=minioadmin
 AWS_SECRET=minioadmin
-AWS_ENDPOINT=http://localhost:9000
+AWS_ENDPOINT=http://minio:9000
+AWS_USE_PATH_STYLE_ENDPOINT=true
 AWS_BUCKET=dev
 AWS_BUCKET_TTL=+30min
 ###< aws/aws-sdk-php-symfony ###
