chore: add to env jwt token ttl

--- a/.env
+++ b/.env
@@ -38,6 +38,7 @@ POSTGRES_DB=gs
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=fc3a60c89c683367f1faf545bcbd93c5
+JWT_TOKEN_TTL=86400
 ###< lexik/jwt-authentication-bundle ###
 
 ###> nelmio/cors-bundle ###
