--- a/composer.json
+++ b/composer.json
@@ -93,6 +93,7 @@
         }
     },
     "require-dev": {
+        "dg/bypass-finals": "^1.4",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
